--- a/app/static/main.scss
+++ b/app/static/main.scss
@@ -1,14 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html, body {
   position: relative;
   height: 100%;
   background: black;
 }
 
-body {
-  margin: 0;
-}
+
 
 .swiper-container {
   width: 100%;
