updated image size

--- a/app/static/main.scss
+++ b/app/static/main.scss
@@ -53,6 +53,7 @@ html, body {
 
 .slide1 {
   background: no-repeat url('../../images/Borabora.jpg');
+  background-size: 100vw;
 
   h1:before{
     border-left: 1px solid #fff;
@@ -62,6 +63,7 @@ html, body {
 
 .slide2 {
   background: no-repeat url('../../images/Paris.jpg');
+  background-size: 100vw;
 
   h1:before{
     border-right: 1px solid #fff;
@@ -82,6 +84,7 @@ html, body {
 
 .slide3 {
   background: no-repeat url('../../images/Zion.jpg');
+  background-size: 100vw;
 
   h1:before{
     border-right: 1px solid #fff;
@@ -102,6 +105,7 @@ html, body {
 
 .slide4 {
   background: no-repeat url('../../images/Iceland.jpg');
+  background-size: 100vw;
 
   h1:before{
     border-right: 1px solid #fff;
@@ -122,6 +126,7 @@ html, body {
 
 .slide5 {
   background: no-repeat url('../../images/giraffemanor.jpg');
+  background-size: 100vw;
 
   h1:before{
     border-right: 1px solid #fff;
@@ -142,6 +147,7 @@ html, body {
 
 .slide6 {
   background: no-repeat url('../../images/banff.jpg');
+  background-size: 100vw;
 
   h1:before {
     border-right: 1px solid #fff;
